tests/baselines/reference/for-inStatementsDestructuring.errors.txt
tests/cases/conformance/statements/for-inStatements/for-inStatementsDestructuring.ts(1,10): error TS2461: Type 'string' is not an array type.
tests/cases/conformance/statements/for-inStatements/for-inStatementsDestructuring.ts(1,10): error TS2491: The left-hand side of a 'for...in' statement cannot be a destructuring pattern.
tests/cases/conformance/statements/for-inStatements/for-inStatementsDestructuring.ts(2,10): error TS2491: The left-hand side of a 'for...in' statement cannot be a destructuring pattern.
tests/cases/conformance/statements/for-inStatements/for-inStatementsDestructuring.ts(2,12): error TS2339: Property 'a' does not exist on type 'String'.
tests/cases/conformance/statements/for-inStatements/for-inStatementsDestructuring.ts(2,15): error TS2339: Property 'b' does not exist on type 'String'.
tests/cases/conformance/statements/for-inStatements/for-inStatementsDestructuring.ts(4,10): error TS2461: Type 'string' is not an array type.
tests/cases/conformance/statements/for-inStatements/for-inStatementsDestructuring.ts(4,10): error TS2491: The left-hand side of a 'for...in' statement cannot be a destructuring pattern.
tests/cases/conformance/statements/for-inStatements/for-inStatementsDestructuring.ts(8,10): error TS2491: The left-hand side of a 'for...in' statement cannot be a destructuring pattern.
tests/cases/conformance/statements/for-inStatements/for-inStatementsDestructuring.ts(8,12): error TS2339: Property 'a' does not exist on type 'String'.
tests/cases/conformance/statements/for-inStatements/for-inStatementsDestructuring.ts(8,15): error TS2339: Property 'b' does not exist on type 'String'.


==== tests/cases/conformance/statements/for-inStatements/for-inStatementsDestructuring.ts (10 errors) ====
    for (var [a, b] in []) {}
             ~~~~~~
!!! error TS2461: Type 'string' is not an array type.
             ~~~~~~
!!! error TS2491: The left-hand side of a 'for...in' statement cannot be a destructuring pattern.
    for (var { a, b } in []) {}
             ~~~~~~~~
!!! error TS2491: The left-hand side of a 'for...in' statement cannot be a destructuring pattern.
               ~
!!! error TS2339: Property 'a' does not exist on type 'String'.
                  ~
!!! error TS2339: Property 'b' does not exist on type 'String'.
    
    for (let [a, b] in []) {
             ~~~~~~
!!! error TS2461: Type 'string' is not an array type.
             ~~~~~~
!!! error TS2491: The left-hand side of a 'for...in' statement cannot be a destructuring pattern.
        (() => a + b);
    }
    
    for (let { a, b } in []) {
             ~~~~~~~~
!!! error TS2491: The left-hand side of a 'for...in' statement cannot be a destructuring pattern.
               ~
!!! error TS2339: Property 'a' does not exist on type 'String'.
                  ~
!!! error TS2339: Property 'b' does not exist on type 'String'.
        (() => a + b);
    }
    